# collaborative-drawing-app

./: CHANGELOG.md  README.md  drawing-tool.cabal  index.html
app/: Main.hs
src/Draw/: Main.hs
