cabal-version:      2.4
name:               drawing-tool
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Mahdi Seyedan
maintainer:         mahdi.se@yahoo.com
extra-source-files: CHANGELOG.md

library
    default-language:    Haskell2010
    ghc-options:         -Wall -Wno-unused-imports
    exposed-modules:     Draw.Main
    build-depends:       base ^>=4.13.0.0
                       , websockets
                       , text
                       , bytestring
                       , containers
                       , stm
                       , async
                       , aeson
    hs-source-dirs:      src
    default-extensions:  OverloadedStrings
                       , LambdaCase
                       , ViewPatterns
                       , ScopedTypeVariables
                       , RecordWildCards
                       , NamedFieldPuns
                       , TupleSections
                       , DeriveFunctor
                       , DeriveGeneric
                       , EmptyDataDecls
                       , DataKinds
                       , FlexibleContexts
                       , GADTs
                       , PolyKinds
                       , RankNTypes
                       , TypeApplications
                       , TypeOperators
                       , TypeFamilies

executable drawing-tool
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.13.0.0,
        drawing-tool

    hs-source-dirs:   app
    default-language: Haskell2010
